--- a/design.html
+++ b/design.html
@@ -36,7 +36,7 @@
             ORDER NOW
         </div>
         <div class="link-button9"> 
-            <p> THIS IS MONDAY <br> HAPPY HOURS   <br>  </p>
+            <p> THIS IS MONDAY <br> HAPPY HOURS  <br> </p>
    
         </div>
         <div class="link-button10"> 
@@ -193,7 +193,14 @@
     <p> main road, building Name, Country
         <br>
         <br>
-    info@companyname.com </p>
+    info@companyname.com 
+<br> 
+<br>
+<br>
+<br>
+Designed by: Gursimran Kaur
+<br> 
+roll no: 2203443</p>
 
     </div>   
    </div>
