--- a/About us.html
+++ b/About us.html
@@ -1,21 +1,19 @@
 <html>
     <head>
-        <title>
-            This is my first webpage 
-        </title>
+
 </head>
 <body>
     <p> This page will give you the information about us </p>
 <!-- Displaying a picture -->
-    <img src="Images/about us.jpg" alt="Image not found" width="400 px" height="100 px">
+    <img src="images1/about.jpg" alt="Image not found" width="400 px" height="100 px">
 
 <!-- linking between the pages -->
  <br>
  <a href="index.html"> Home </a>
  <a href="About us.html"> About us</a>
- <a href="Gallery.html"> Gallery </a>
+ <a href="Gallery.html"> Our story </a>
  <a href="Contact us.html"> Contact us</a>
- <a href="Portfolio.html"> Portfolio </a>
+
  
 </body>
     
