--- a/Contact us.html
+++ b/Contact us.html
@@ -1,21 +1,18 @@
 <html>
     <head>
-        <title>
-            This is my first webpage 
-        </title>
 </head>
 <body>
-    <p> This page will give you the information from where you can contact us </p>
+    <p> This page will give you the information how you can contact us </p>
 <!-- Displaying a picture -->
-    <img src="Images/contact us.jpg" alt="Image not found" width="400 px" height="100 px">
+    <img src="images1/cs.jpg" alt="Image not found" width="400 px" height="100 px">
 
 <!-- linking between the pages -->
  <br>
- <a href="index.html"> Home </a>
+ <a href="design.html"> Home </a>
  <a href="About us.html"> About us</a>
- <a href="Gallery.html"> Gallery </a>
- <a href="Contact us.html"> Contact us</a>
- <a href="Portfolio.html"> Portfolio </a>
+ <a href="Gallery.html"> Our-story</a>
+ <a href="contact us.html"> Contact us</a>
+
  
 </body>
     
