--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <div class="navbar">
             <ul>
                 <!-- This is the linking between the pages -->
-                <li> <a href="newdesign.html"> Home </a></li>
+                <li> <a href="index.html"> Home </a></li>
                 <li> <a href="Gallery.html"> Guides </a></li>
                 <li> <a href="flights.html"> Flight</a></li>
                 <li> <a href="About us.html"> About us </a></li>
