--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                                                                     <a href="Division/Division.css"> 
                                                                                         <ul> <li> css code
                                                                                         </li></ul>       
-                                                                                        <a href=" class Divison/index.html"> 
+                                                                                        <a href="Class Divison/index.html"> 
                                                                                             <li> Class Divison webpage 
                                                                                                        <ul> <li> Html Code </li></ul>
                                                                                                    </li>
