--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                                                                             <li> Class Divison webpage 
                                                                                                        <ul> <li> Html Code </li></ul>
                                                                                                    </li>
-                                                                                                   <a href="Class Divison/Style.css"> 
+                                                                                                   <a href="Class Divison/style.css"> 
                                                                                                        <ul> <li> css code
                                                                                                        </li></ul>       
                                                                                                        <a href="json/index.html"> 
