--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                                     <a href="Food4u/Gallery.html"> 
                                                         <ul> <li> Gallery page
                                                         </li></ul>
-                                                        <a href="Food4u/portfolio.html"> 
+                                                        <a href="Food4u/Portfolio.html"> 
                                                             <ul> <li> Portfolio page
                                                             </li></ul>
                     
