--- a/flights/index.html
+++ b/flights/index.html
@@ -1,6 +1,24 @@
 <html> 
     <head> 
         <link rel="stylesheet" href="../css/newdesign1.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width-device-width",
+         initial-scale="1", maximum scale="1", minimal-ui>
+         <title> Indian Flight services, Fast and Affordable flights in India</title>
+         <meta name="Description" content="This is the webpage about the indian flight services, where you can easily book the flights 
+         for the destination, give your feedbacks, asks for the queries, and know everything about us"/>
+         <!-- google search engine tag -->
+          <meta itemprop="name" content="Indian Flight services,
+           Fast and Affordable flights in India">
+           <meta itemprop="Description" content="This is the webpage about the indian flight services, where you can easily book the flights 
+           for the destination, give your feedbacks, asks for the queries, and know everything about us"/>
+
+           <!-- Facebook Tags -->
+            <meta property="og:type" content="website">
+            <meta property="og:title" content="Indian Flight services, Fast and Affordable flights in India">
+            <meta property="og:Description" content="This is the webpage about the indian flight services, where you can easily book the flights 
+            for the destination, give your feedbacks, asks for the queries, and know everything about us">
+
     </head>
     <!-- class for the formation of the navigation bar  -->
         <div class="navbar">
