--- a/Food4u/index.html
+++ b/Food4u/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="Stylesheet" href="../css/design1.css">
+        <link rel="Stylesheet" href="design1.css">
     </head>
     <body>
  <div class="container"> 
