--- a/flights/index.html
+++ b/flights/index.html
@@ -1,6 +1,6 @@
 <html> 
     <head> 
-        <link rel="stylesheet" href="../css/newdesign1.css">
+        <link rel="stylesheet" href="newdesign1.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width-device-width",
          initial-scale="1", maximum scale="1", minimal-ui>
