--- a/Food4u/index.html
+++ b/Food4u/index.html
@@ -7,7 +7,7 @@
 
     <div class="header"> 
         <div class="text-location">
-        <a href="design.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="About us.html">About-us</a>
         <a href="Gallery.html">Our-Story</a>
         <a href="Contact us.html">Contact-us</a>
