--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                                 <a href="flights/Portfolio.html"> 
                                     <ul> <li> Portfolio page 
                                     </li></ul>
-        <a href="Food4u/index.html.html"> 
+        <a href="Food4u/index.html"> 
                                         <li> Food4u webpage
                                             <ul> <li> Html Code </li></ul>
                                         </li>                       
