--- a/Division/index.html
+++ b/Division/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="Stylesheet" href="../css/Division.css">
+        <link rel="Stylesheet" href="Division.css">
     </head>
     <body>
  <div class="container"> 
