--- a/Navigation Bar/index.html
+++ b/Navigation Bar/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="Stylesheet" href="../css/new.css">
+        <link rel="Stylesheet" href="new.css">
     </head>
     <body>
         <div class="navbar">
