--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
         <title> Github pages </title>
     </head>
     <body>
+        <div class="navbar">
+            <ul>
+                <!-- This is the linking between the pages -->
+                <li> <a href="index.html"> Home </a></li>
+                <li> <a href="Daily_report.html"> Daily Report </a></li>
+
+
+            </ul>
+        </div>
         <div class="Topheader">
         <div class="container"> 
             <div class="header">
@@ -17,9 +26,8 @@
         <div class="textlocation1">
             <h5>...... Daily Tasks performed......</h5>
         </div>
-        <div class="Circular-div">
-
-        </div>
+        <div class="circular-div"> </div>
+        <div class="circular-div1"> </div>
         </div>
       
        
