--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
                             <div class="box10"> 
                                 <a href="today's task.pdf" class="link10">Today's Task</a>
                             </div> 
+                            <div class="box11"> 
+                                <a href="Complex RDF structure/WebVOWL.html" class="link11">Webvowl html</a>
+                            </div> 
+                            <div class="box12"> 
+                                <a href="Dataset for sparql/datset.ttl" class="link12">Dataset for sparql</a>
+                            </div> 
+                            <div class="box13"> 
+                                <a href="Dataset for sparql/Rdf Graph.svg" class="link13">Webvowl html</a>
+                            </div> 
                         
                             </div>
                             <div class="footer">
