--- a/Daily Report/index.html
+++ b/Daily Report/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="Stylesheet" href="style2.css">
+        <link rel="Stylesheet" href="../Daily Report/style2.css">
         <title> Github pages </title>
     </head>
     <body>
