--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <ul>
                 <!-- This is the linking between the pages -->
                 <li> <a href="index.html"> Home </a></li>
-                <li> <a href="Daily_report.html"> Daily Report </a></li>
+                <li> <a href="Daily Report/index.html"> Daily Report </a></li>
 
 
             </ul>
